fixed scroll on mobile view

--- a/assets/sass/style.scss
+++ b/assets/sass/style.scss
@@ -16,7 +16,7 @@ body {
     font-family: $primary-font;
     margin: 0;
     padding: 0;
-    overflow-x: clip;
+    overflow-x: hidden;
 
 }
 h1, h2, h3, h4, h5 {
